apps/base/family-manager/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: family-manager
  labels:
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
