apps/base/family-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: family-manager-webhook
  namespace: family-manager
spec:
  selector:
    app: family-manager-webhook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8765
